--- a/Mega6Box/Mega6Box/View/MainMovieList.storyboard
+++ b/Mega6Box/Mega6Box/View/MainMovieList.storyboard
@@ -49,13 +49,16 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="button-04" id="DWX-mr-CUX">
-                                                    <rect key="frame" x="14" y="0.0" width="133" height="212"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="133" height="212"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <color key="backgroundColor" red="1" green="0.19881014899999999" blue="0.87674288460000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 </imageView>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IUO-Sy-hmB">
-                                                    <rect key="frame" x="30" y="177" width="105" height="35"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IUO-Sy-hmB">
+                                                    <rect key="frame" x="13" y="160" width="106" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="44" id="DwI-vt-6p5"/>
+                                                        <constraint firstAttribute="width" constant="106" id="dqR-TQ-zTh"/>
+                                                    </constraints>
                                                     <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="tinted" cornerStyle="capsule">
@@ -71,6 +74,10 @@
                                                     </buttonConfiguration>
                                                 </button>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="IUO-Sy-hmB" firstAttribute="leading" secondItem="DWX-mr-CUX" secondAttribute="leading" constant="13" id="W25-vS-EkQ"/>
+                                                <constraint firstItem="IUO-Sy-hmB" firstAttribute="bottom" secondItem="DWX-mr-CUX" secondAttribute="bottom" constant="-8" id="lYA-CG-ebt"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="393" height="212"/>
                                         <connections>
