--- a/Mega6Box/Mega6Box/View/MainMovieList.storyboard
+++ b/Mega6Box/Mega6Box/View/MainMovieList.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -249,6 +249,9 @@
                                         </constraints>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" backgroundImage="button-06"/>
+                                        <connections>
+                                            <action selector="tapMyPageBtn:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Mq8-lT-i6A"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -323,7 +326,7 @@
                         <outlet property="eventButton3" destination="Y1R-GI-s9e" id="rdu-RU-ARA"/>
                         <outlet property="eventButton4" destination="JlO-RA-Vqv" id="iqX-bh-YT6"/>
                         <outlet property="homeButton" destination="RVp-H6-aAp" id="YGk-1I-RAn"/>
-                        <outlet property="myPageButton" destination="x5B-P2-68A" id="3f3-R2-xb4"/>
+                        <outlet property="myPageButton" destination="x5B-P2-68A" id="zYk-Il-Gim"/>
                         <outlet property="nowPlaying" destination="gJz-AY-hbz" id="69h-5v-O7S"/>
                         <outlet property="pageControl" destination="8rg-ER-ZU2" id="eYj-cb-3hy"/>
                         <outlet property="posterCollectionView" destination="d2N-FC-t7v" id="6BP-JH-Ycj"/>
@@ -343,7 +346,7 @@
         <image name="roundSquare-03" width="628.5" height="620.5"/>
         <image name="search-01" width="625" height="625"/>
         <systemColor name="systemTealColor">
-            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.18823529410000001" green="0.69019607839999997" blue="0.78039215689999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
